fixing spacing, video

--- a/Assets/styles/get_in_touch.css
+++ b/Assets/styles/get_in_touch.css
@@ -315,4 +315,8 @@ main {
   }
 }
 
+input, textarea {
+  font-size: 18px;
+}
+
 
